# SwarmMap

./: .gitignore  CMakeLists.txt  Dependencies.md  LICENSE.txt  README.md
code/: build.sh
code/Examples/Monocular/: client.cc  mono_euroc.cc  mono_kitti.cc  mono_tum.cc  relocalizer.cc  server.cc  swarm_map.cc
code/Examples/RGB-D/: rgbd_tum.cc
code/Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
code/include/: AgentMediator.h  BoostArchiver.h  CLogger.h  ClientMediator.h  ClientService.h  ConnectionService.h  Converter.h  DataSetUtil.h  DynamicExtractor.h  DynamicRunner.h  Frame.h  KeyFrame.h  KeyFrameDatabase.h  LandmarkScoring.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapElementUpdate.h  MapEnhancer.h  MapManager.h  MapPoint.h  MapSlice.h  MapUpdater.h  Mapit.h  MediatorScheduler.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  STS.h  ServerService.h  System.h  SystemState.h  Timer.h  Tracking.h  Utils.hpp  Viewer.h  WebSocket.h
code/include/g2o/: EdgeSim3RelativeXYZ.h
code/src/: AgentMediator.cc  ClientMediator.cc  ClientService.cc  ConnectionService.cc  Converter.cc  DataSetUtil.cc  DynamicExtractor.cc  DynamicRunner.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LandmarkScoring.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapElementUpdate.cc  MapEnhancer.cc  MapManager.cc  MapPoint.cc  MapSlice.cc  MapUpdater.cc  Mapit.cc  MediatorScheduler.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  STS.cc  ServerService.cc  System.cc  Timer.cc  Tracking.cc  Viewer.cc  WebSocket.cc
code/src/Network/: ConnectionService.cc  WebSocket.cc
config/: fr2-desk.yaml  fr2-large12.yaml  kitti00-02.yaml  mh1.yaml  mh123.yaml  mh12345.yaml  mh2.yaml  v1-123.yaml  v2-123.yaml
